# umrah-planner

./: .dockerignore  .env.example  .gitignore  =2.0.0  DEPLOY.md  Dockerfile  ENGAGEMENT_INTEGRATION_GUIDE.md  HOTFIX_footer.py  LICENSE  PATCH_README.md  PATCH_render_invite_modal.py  PROJECT_STRUCTURE.md  README.md  TERMS_OF_SERVICE.md  add_tracking_to_pages.py  affiliate.py  agents.py  analytics.py  android_app_guide.md  app.py  app_labbaik_v3.py  audit_pages.py  auth.py  auto_patch_app.py  booking.py  config.py  database.py  db_integration.py  deploy.sh  docker-compose.yml  engagement.py  features.py  generate_icons.py  labbaik_ui.py  landing.py  monetization.py  nixpacks.toml  payment.py  pwa_component.py  pwa_setup_guide.md  (+15 more)
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
.streamlit/: config.toml  secrets.toml.example
agents/: __init__.py  base_agent.py  financial_agent.py  orchestrator.py  planning_agent.py  research_agent.py
app/: main.py
config/: settings.yaml
core/: __init__.py  config.py  constants.py  exceptions.py  logging_config.py
data/: __init__.py  knowledge_base.json
data/knowledge/: __init__.py  arabic_phrases.py  faq.py  umrah_guide.py
data/models/: __init__.py
docs/: INTEGRATION_README.md  RUNBOOK.md
features/: README.md  __init__.py  crowd_prediction.py  doa_player.py  group_tracking.py  manasik_3d.py  pwa_support.py  smart_comparison.py  sos_emergency.py  whatsapp_service.py
features/emergency/: emergency_hub.py
features/pilgrim_rights/: insurance_explainer.py
features/verification/: agent_verification.py
plugins/: base.py
plugins/available/analytics/: plugin.py  plugin.yaml
plugins/available/gamification/: plugin.py  plugin.yaml
rag/: __init__.py  embeddings.py  retriever.py  vectorstore.py
scenarios/: __init__.py  planner.py
scripts/: init-db.sql  migrate.py  visitor_analytics_schema.sql
services/: __init__.py  api_client.py  data_service.py  state_manager.py
services/ai/: base.py  chat_service.py  rag_service.py
services/analytics/: __init__.py  dashboard.py  tracker.py  tracker_fixed.py  visitor_analytics.py
services/auth/: auth_service.py
services/cost/: calculator.py
services/database/: __init__.py  repository.py
services/notification/: notification_service.py
services/price/: __init__.py  monitoring.py  repository.py
services/whatsapp/: __init__.py  waha_client.py
static/: manifest.json  offline.html  service-worker.js
tests/: conftest.py
tests/integration/: test_cost_calculator.py  test_database.py  test_plugins.py
tests/unit/: test_ai_services.py  test_config.py  test_models.py
ui/: __init__.py
ui/components/: __init__.py  price_widgets.py
ui/pages/: __init__.py  booking.py  chat.py  hak_jamaah.py  home.py  itinerary_builder.py  partner_dashboard.py  simulator.py  smart_checklist.py  umrah_bareng.py  umrah_mandiri.py
utils/: __init__.py  formatters.py  helpers.py
