[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "labbaik-ai"
version = "6.0.0"
description = "LABBAIK AI - Asisten Perjalanan Umrah Cerdas"
authors = ["MS Hadianto <info@mshadianto.id>"]
license = "Proprietary"
readme = "README.md"
homepage = "https://labbaik.cloud"
repository = "https://github.com/mshadianto/labbaik-ai"
keywords = ["umrah", "ai", "travel", "islamic", "pilgrimage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Natural Language :: Indonesian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
packages = [
    { include = "app" },
    { include = "core" },
    { include = "services" },
    { include = "data" },
    { include = "ui" },
    { include = "plugins" },
    { include = "utils" },
]

[tool.poetry.dependencies]
python = "^3.10"

# Core Framework
streamlit = "^1.32.0"

# AI & LLM
groq = "^0.5.0"
openai = "^1.12.0"

# RAG & Embeddings
sentence-transformers = "^2.2.0"
chromadb = "^0.4.22"

# Database
psycopg2-binary = "^2.9.9"

# Data Validation
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Configuration
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"

# Authentication
pyjwt = "^2.8.0"
google-auth = "^2.27.0"
google-auth-oauthlib = "^1.2.0"

# HTTP Client
httpx = "^0.26.0"
aiohttp = "^3.9.0"

# Utilities
python-dateutil = "^2.8.2"
pytz = "^2024.1"
phonenumbers = "^8.13.0"

# Security
bcrypt = "^4.1.0"
cryptography = "^42.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

# Code Quality
black = "^24.2.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

# Documentation
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"

[tool.poetry.scripts]
labbaik = "app.main:main"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv", "venv", "migrations"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests",
    "migrations",
    ".venv",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=app --cov=core --cov=services --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["app", "core", "services", "data", "ui", "plugins"]
omit = ["*/tests/*", "*/__pycache__/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
